--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -18,9 +18,9 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Best Cars</a>
-                <a class="navbar-brand" href="#">About Us</a>
-                <a class="navbar-brand" href="#">Contact</a>
+                <a class="navbar-brand" href="{% url 'djangoapp:index' %}"><b>Best Cars</b></a>
+                <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About Us</a>
+                <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact Us</a>
             </div>
         </div>
     </nav>
