--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,11 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-    <body>
-    <!--Add a registration form here -->
-    </body>
-</html>
+{% extends 'djangoapp/base.html' %}
+{% block content %}
+
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <div class="card">
+            <div class="card-header">Sin Up</div>
+            <div class="card-body">
+                <form name="my-form" action="{% url 'djangoapp:signup' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group row">
+                        <label for="username" class="col-md-4 col-form-label text-md-right">User Name</label>
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" name="username" required>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="firstname" class="col-md-4 col-form-label text-md-right">First Name</label>
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" name="firstname" required>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="lastname" class="col-md-4 col-form-label text-md-right">Last Name</label>
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" name="lastname" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                        <div class="col-md-6">
+                            <input type="password" class="form-control" name="password" required>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 offset-md-4">
+                        <button type="submit" class="btn btn-primary">
+                        Sign up
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
