--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -30,7 +30,7 @@
                     <div class="form-group row">
                         <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
                         <div class="col-md-6">
-                            <input type="password" class="form-control" name="password" required>
+                            <input type="password" class="form-control" name="psw" required>
                         </div>
                     </div>
 
