--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,18 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-
-    <body>
-
-    <!--Add a nav bar here -->
-
-    <!-- Add reviews as cards -->
-
-    </body>
-
-</html>
+{% extends "djangoapp/base.html" %}
+{% block content %}
+{% if user.is_authenticated %}
+<div class='row'>
+    <div class="col d-flex justify-content-end">
+        <button type="button" class="btn btn-primary">Add review</button>
+    </div>
+</div>
+<div class="card-columns">
+    {% for review in reviews  %}
+    <div class="card">
+        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png">
+        <div class="card-body">
+            <h5 class="card-title">{{review.name}}</h5>
+            <h6 class="card-title">{{review.purchase_date}}</h5>
+            <p class='card-text'>{{review.review}}</p>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+{% endblock %}
