--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -6,17 +6,17 @@
         <button type="button" class="btn btn-primary">Add review</button>
     </div>
 </div>
+{% endif %}
 <div class="card-columns">
     {% for review in reviews  %}
     <div class="card">
-        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png">
+        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/{{review.sentiment|default:'neutral'}}.png" width="30" height="30">
         <div class="card-body">
             <h5 class="card-title">{{review.name}}</h5>
-            <h6 class="card-title">{{review.purchase_date}}</h5>
+            <h6 class="card-title">{{review.car_year}}</h5>
             <p class='card-text'>{{review.review}}</p>
         </div>
     </div>
     {% endfor %}
 </div>
-{% endif %}
 {% endblock %}
