--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,16 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+{% extends 'djangoapp/base.html' %}
+{% block content %}
 
-</head>
-    <body>
-    <!--Add review form here -->
-    </body>
-</html>
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <div class="card">
+            <div class="card-header">Review {{dealer_name}} Car Dealership</div>
+            <div class="card-body">
+                <form name="my-form" action="{% url 'djangoapp:add_review' dealer_id%}" method="post">
+                    {% csrf_token %}
+                    <label for="review" class="col-md-4 col-form-label text-md-right">Enter the review content</label>
+                    <div class="col-md-8">
+                        <textarea class="form-control" id="review" name="review" rows="2" required></textarea>
+                    </div>
+                    <input type="checkbox" class="form-control" name="purchase" id='purchase' required>
+                    <label for="firstname" class="col-md-4 col-form-label text-md-right">
+                        Has purchased the car from {{dealer_name}} Car Dealership?
+                    </label>
+                    <label for="lastname" class="col-md-4 col-form-label text-md-right">Select your car (model-make-year)</label>
+                    <div class="col-md-6">
+                        <select name="car" id="car" class="form-select" required>
+                            {% for car in cars %}
+                                <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <label for="password" class="col-md-4 col-form-label text-md-right">Select Purchase Date</label>
+                    <div class="col-md-6">
+                        <input type="text" class="date-own form-control" name="purchasedate" id='purchasedate'>
+                    </div>
+
+                    <div class="col-md-6 offset-md-4">
+                        <button type="submit" class="btn btn-primary">
+                        Submit
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+{% block scripts %}
+<script>
+    $('.date-own').datepicker({
+        format: 'mm/dd/yyyy'
+    });
+
+    const is_purchased = document.getElementById('purchase');
+
+    const purchasedate = document.getElementById('purchasedate');
+
+    checkbox.addEventListener('click', function handleClick() {
+    if (is_purchased.checked) {
+        purchasedate.style.visibility = 'visible';
+        purchasedate.attributes["required"] = "required"
+    } else {
+        purchasedate.style.visibility = 'hidden';
+        purchasedate.attributes["required"] = ""
+    }
+    });
+</script>
+{% endblock %}
